--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "Wrapper",
     "Charts"
   ],
+  "sideEffects": false,
   "main": "./src/index.js",
   "typings": "./dist/index.d.ts",
   "publishConfig": {
@@ -46,10 +47,10 @@
   "scripts": {
     "prepublishOnly": "pnpm test && pnpm build && del ./package && clean-publish",
     "postpublish": "del ./package",
-    "emitDeclarations": "tsc --skipLibCheck --emitDeclarationOnly",
-    "build": "rollup -c & pnpm emitDeclarations",
+    "build": "rollup -c",
     "unit": "jest -c jest.config.json",
     "test": "pnpm lint && pnpm unit",
+    "test:size": "size-limit",
     "lint": "eslint --ext .js,.vue src test",
     "format": "prettier --write src test",
     "release": "standard-version",
@@ -59,7 +60,7 @@
     "start:storybook": "start-storybook -p 6006"
   },
   "peerDependencies": {
-    "chart.js": ">= 2.5"
+    "chart.js": "^3.7.0"
   },
   "dependencies": {
     "@types/chart.js": "^2.7.55"
@@ -70,19 +71,19 @@
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@size-limit/preset-big-lib": "^7.0.8",
     "@storybook/addon-actions": "^6.4.12",
     "@storybook/addon-essentials": "^6.4.13",
     "@storybook/vue": "^6.4.12",
     "@swc/core": "^1.2.120",
     "@swc/helpers": "^0.3.2",
     "@swc/jest": "^0.2.15",
-    "@types/chart.js": "^2.7.55",
     "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^27.0.0-alpha.4",
     "babel-jest": "^27.4.5",
     "babel-loader": "8.2.3",
     "browserslist": "^4.19.1",
-    "chart.js": "^2.8.0",
+    "chart.js": "^3.7.0",
     "clean-publish": "^4.0.0",
     "commitizen": "^4.2.4",
     "cross-env": "^5.1.1",
@@ -108,6 +109,7 @@
     "rollup-plugin-swc": "^0.2.0",
     "rollup-plugin-vue": "^6.0.0",
     "simple-git-hooks": "^2.7.0",
+    "size-limit": "^7.0.8",
     "standard-version": "^9.3.2",
     "vue": "2.6.14",
     "vue-hot-reload-api": "2.3.1",
