--- a/package.json
+++ b/package.json
@@ -62,9 +62,6 @@
   "peerDependencies": {
     "chart.js": "^3.7.0"
   },
-  "dependencies": {
-    "@types/chart.js": "^2.7.55"
-  },
   "devDependencies": {
     "@babel/core": "7.16.5",
     "@babel/preset-env": "^7.16.5",
@@ -74,12 +71,13 @@
     "@size-limit/preset-big-lib": "^7.0.8",
     "@storybook/addon-actions": "^6.4.12",
     "@storybook/addon-essentials": "^6.4.13",
-    "@storybook/vue": "^6.4.12",
+    "@storybook/vue3": "^6.4.19",
     "@swc/core": "^1.2.120",
     "@swc/helpers": "^0.3.2",
     "@swc/jest": "^0.2.15",
-    "@vue/test-utils": "^1.3.0",
-    "@vue/vue2-jest": "^27.0.0-alpha.4",
+    "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "@vue/vue3-jest": "^27.0.0-alpha.4",
     "babel-jest": "^27.4.5",
     "babel-loader": "8.2.3",
     "browserslist": "^4.19.1",
@@ -87,19 +85,17 @@
     "clean-publish": "^4.0.0",
     "commitizen": "^4.2.4",
     "cross-env": "^5.1.1",
-    "css-loader": "^0.28.0",
     "cz-conventional-changelog": "3.3.0",
     "del-cli": "^4.0.1",
     "eslint": "7.28.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^16.0.3",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-prettier-vue": "^3.1.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.3",
     "jest-canvas-mock": "^2.3.1",
@@ -107,16 +103,12 @@
     "prettier": "2.5.1",
     "rollup": "^2.66.1",
     "rollup-plugin-swc": "^0.2.0",
-    "rollup-plugin-vue": "^6.0.0",
     "simple-git-hooks": "^2.7.0",
     "size-limit": "^7.0.8",
     "standard-version": "^9.3.2",
-    "vue": "2.6.14",
-    "vue-hot-reload-api": "2.3.1",
-    "vue-html-loader": "^1.2.4",
-    "vue-loader": "^15.9.8",
-    "vue-style-loader": "4.1.2",
-    "vue-template-compiler": "2.6.14",
+    "vite": "^2.8.6",
+    "vue": "^3.2.31",
+    "vue-loader": "^17.0.0",
     "vuepress": "^0.14.4"
   }
 }
