--- a/legacy/sandboxes/line/package.json
+++ b/legacy/sandboxes/line/package.json
@@ -3,6 +3,6 @@
   "dependencies": {
     "vue": "2.6.14",
     "chart.js": "3.7.0",
-    "vue-chartjs": "4.0.0"
+    "vue-chartjs": "^4.0.0"
   }
 }
