--- a/sandboxes/pie/package.json
+++ b/sandboxes/pie/package.json
@@ -4,7 +4,7 @@
     "chart.js": "3.7.0",
     "typescript": "^4.6.2",
     "vue": "^3.2.31",
-    "vue-chartjs": "4.0.2"
+    "vue-chartjs": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0"
