--- a/legacy/package.json
+++ b/legacy/package.json
@@ -12,7 +12,7 @@
     "@swc/core": "1.2.171",
     "@swc/jest": "0.2.20",
     "@vue/test-utils": "1.3.0",
-    "@vue/vue2-jest": "27.0.0-alpha.4",
+    "@vue/vue2-jest": "27.0.0",
     "babel-jest": "27.5.1",
     "css-loader": "6.7.1",
     "jest": "27.5.1",
