feat(legacy-charts): add typescript definitions for legacy charts (#839)
add typescript definitions for legacy charts

#825

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,4 @@ npm-debug.log*
 coverage
 
 # legacy builds
-/legacy/index.cjs
-/legacy/index.cjs.map
-/legacy/index.js
-/legacy/index.js.map
+/legacy/index*
