--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
   "scripts": {
     "prepublishOnly": "pnpm test && pnpm build && del ./package && clean-publish",
     "postpublish": "del ./package",
-    "emitDeclarations": "tsc --emitDeclarationOnly",
+    "emitDeclarations:legacy": "cd legacy && pnpm emitDeclarations",
+    "emitDeclarations:base": "tsc --emitDeclarationOnly",
+    "emitDeclarations": "pnpm emitDeclarations:base && pnpm emitDeclarations:legacy",
     "build": "rollup -c & pnpm emitDeclarations",
     "unit": "pnpm unit:base && pnpm unit:legacy",
     "unit:base": "jest -c jest.config.json",
