--- a/package.json
+++ b/package.json
@@ -52,14 +52,15 @@
     "postpublish": "del ./package",
     "emitDeclarations": "tsc --emitDeclarationOnly",
     "build": "rollup -c & pnpm emitDeclarations",
-    "unit": "jest -c jest.config.json",
-    "test": "pnpm lint && pnpm unit",
-    "test:size": "size-limit",
-    "test:typings": "tsd",
     "lint": "eslint 'src/**/*.ts'",
+    "test:unit": "vitest run --coverage",
+    "test:unit:watch": "vitest watch",
+    "test:typings": "tsd",
+    "test:size": "size-limit",
+    "test": "pnpm lint && pnpm test:unit",
     "format": "prettier --write src test",
     "commit": "cz",
-    "start:storybook": "start-storybook -p 6006",
+    "start:storybook": "start-storybook -p 6006 --ci",
     "build:storybook": "del ./storybook-static; NODE_ENV=production build-storybook",
     "bumpVersion": "standard-version",
     "createGithubRelease": "simple-github-release",
@@ -76,20 +77,20 @@
     "@commitlint/config-conventional": "^17.0.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@size-limit/preset-big-lib": "^7.0.8",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/builder-webpack5": "^6.5.9",
-    "@storybook/manager-webpack5": "^6.5.9",
-    "@storybook/vue3": "^6.5.9",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-controls": "^6.5.13",
+    "@storybook/addon-docs": "^6.5.13",
+    "@storybook/addons": "^6.5.13",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/client-api": "^6.5.13",
+    "@storybook/client-logger": "^6.5.13",
+    "@storybook/vue3": "^6.5.13",
     "@swc/core": "^1.2.120",
     "@swc/helpers": "^0.4.0",
-    "@swc/jest": "^0.2.15",
-    "@types/jest": "^27.4.1",
-    "@vitejs/plugin-vue": "^3.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vitest/coverage-c8": "^0.25.3",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0-rc.17",
-    "@vue/vue3-jest": "^28.0.0",
-    "babel-jest": "^27.4.5",
     "babel-loader": "8.2.5",
     "browserslist": "^4.19.1",
     "chart.js": "^3.7.0",
@@ -109,10 +110,11 @@
     "eslint-plugin-prettier-vue": "3.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-vue": "^9.0.0",
-    "jest": "^27.4.3",
-    "jest-canvas-mock": "^2.3.1",
+    "jsdom": "^20.0.3",
     "lint-staged": "^13.0.0",
     "prettier": "2.7.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.66.1",
     "rollup-plugin-swc": "^0.2.0",
     "simple-git-hooks": "^2.7.0",
@@ -121,7 +123,9 @@
     "standard-version": "^9.3.2",
     "tsd": "^0.22.0",
     "typescript": "^4.6.2",
-    "vite": "^3.0.0",
+    "vite": "^3.0.2",
+    "vitest": "^0.25.3",
+    "vitest-canvas-mock": "^0.2.2",
     "vue": "^3.2.31",
     "vue-loader": "^17.0.0"
   },
