--- a/package.json
+++ b/package.json
@@ -71,8 +71,6 @@
     "vue": "^3.0.0-0 || ^2.6.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.9",
-    "@babel/preset-env": "^7.16.5",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -91,7 +89,6 @@
     "@vitest/coverage-c8": "^0.25.3",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0-rc.17",
-    "babel-loader": "8.2.5",
     "browserslist": "^4.19.1",
     "chart.js": "^3.7.0",
     "clean-publish": "^4.0.0",
@@ -102,7 +99,6 @@
     "eslint": "8.20.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-node": "^11.1.0",
@@ -126,8 +122,7 @@
     "vite": "^3.0.2",
     "vitest": "^0.25.3",
     "vitest-canvas-mock": "^0.2.2",
-    "vue": "^3.2.31",
-    "vue-loader": "^17.0.0"
+    "vue": "^3.2.31"
   },
   "tsd": {
     "directory": "./test"
