--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@size-limit/preset-big-lib": "^8.0.0",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-controls": "^6.5.13",
@@ -84,7 +84,7 @@
     "@storybook/client-api": "^6.5.13",
     "@storybook/client-logger": "^6.5.13",
     "@storybook/vue3": "^6.5.13",
-    "@swc/core": "^1.2.120",
+    "@swc/core": "^1.3.21",
     "@swc/helpers": "^0.4.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vitest/coverage-c8": "^0.25.3",
@@ -112,8 +112,8 @@
     "prettier": "2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rollup": "^2.66.1",
-    "rollup-plugin-swc": "^0.2.0",
+    "rollup": "^3.5.1",
+    "rollup-plugin-swc3": "^0.7.0",
     "simple-git-hooks": "^2.7.0",
     "simple-github-release": "^1.0.0",
     "size-limit": "^8.0.0",
