--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
   "exports": "./src/index.ts",
   "publishConfig": {
     "exports": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.cjs"
     },
     "directory": "package"
   },
@@ -71,7 +72,7 @@
     "updateGitHooks": "simple-git-hooks"
   },
   "peerDependencies": {
-    "chart.js": "^4.0.0",
+    "chart.js": "^4.1.1",
     "vue": "^3.0.0-0 || ^2.6.0"
   },
   "devDependencies": {
@@ -94,7 +95,7 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0-rc.17",
     "browserslist": "^4.19.1",
-    "chart.js": "^4.0.0",
+    "chart.js": "^4.1.1",
     "clean-publish": "^4.0.0",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.0",
